# treeing

./: .gitignore  CHANGELOG.md  LICENSE  PRIVACY.md  README.md  TERMS.md  build.py  pyproject.toml  requirements-build.txt
.github/workflows/: build.yml
docs/: USER_GUIDE.md
scripts/: treeing-cli.cmd  treeing-cli.ps1
treeing/: __init__.py  _release_defaults.py  cli_entry.py  config.py  gui_entry.py  main.py  path_checks.py  strings.bootstrap.json  strings.json
treeing/assets/: icon.icns
treeing/cli/: __init__.py  confirm.py  help_text.py  io.py  main.py  report.py
treeing/core/: __init__.py  constants.py  generator.py  parser.py  preview.py
treeing/gui/: __init__.py  app.py  dnd.py  icon.py  preview.py  settings.py  tooltip.py
