[project]
name = "treeing"
version = "1.0.0"
description = "ASCII tree → directory/file generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "MING"},
]

[project.urls]
Homepage = "https://github.com/xiao-ming-b65536/treeing"

[tool.setuptools]
packages = ["treeing", "treeing.cli", "treeing.core", "treeing.gui", "treeing.assets"]
include-package-data = true

[tool.setuptools.package-data]
treeing = ["strings.json", "strings.bootstrap.json", "assets/*"]
